# WiFiAIO

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt  setup.cfg  setup.py  worklog.md
.github/workflows/: ci.yml
configs/: default_config.json
configs/hostapd/: hostapd_open.conf  hostapd_wpa2.conf  hostapd_wpa3.conf
scripts/: auto_dev.sh  build.sh  check_deps.sh  generate_wordlist.py  install.ps1  install.sh  install_termux.sh  run.sh  setup_kali.sh  uninstall.sh
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_crypto.py  test_database.py  test_exceptions.py  test_utils.py  test_validators.py
wifi_aio/: __init__.py  __main__.py  auto_installer.py  auto_updater.py  cli.py  config.py  constants.py  crypto_utils.py  database.py  dependency_checker.py  exceptions.py  export_engine.py  logger.py  network_utils.py  notification.py  platform_detect.py  plugin_manager.py  report_engine.py  scheduler.py  session.py  theme.py  tui.py  update_checker.py  utils.py  validators.py
wifi_aio/analysis/: __init__.py  anomaly_detector.py  channel_analyzer.py  coverage_mapper.py  device_tracker.py  ml_anomaly.py  network_comparator.py  signal_processor.py  statistics.py  topology_mapper.py  traffic_analyzer.py
wifi_aio/api/: __init__.py  models.py  server.py  websocket.py
wifi_aio/automation/: __init__.py  batch_processor.py  custom_script.py  script_recorder.py  task_scheduler.py  workflow_engine.py
wifi_aio/automation/workflows/: __init__.py  deauth_eviltwin_capture.py  monitor_alert_log.py  scan_capture_crack.py  scan_vuln_report.py
wifi_aio/capture/: __init__.py  capture_filter.py  chunked_reader.py  frame_parser.py  handshake_extractor.py  pcap_reader.py  pcap_writer.py  pmkid_extractor.py  raw_capture.py  scapy_capture.py
wifi_aio/core/: __init__.py  automation.py  bluetooth_scanner.py  compliance_checker.py  deauth_engine.py  evil_twin.py  forensics.py  frame_injector.py  geolocation.py  handshake_capture.py  interface_manager.py  jammer.py  network_connector.py  network_scanner.py  osint.py  packet_sniffer.py  password_cracker.py  password_tools.py  reporting.py  signal_analyzer.py  speed_tester.py  system_utils.py  termux_module.py  tool_integration.py  vuln_scanner.py  wifi_6e7.py  wps_engine.py
wifi_aio/cracking/: __init__.py  benchmark.py  brute_force.py  dictionary.py  hash_converter.py  hash_extractor.py  hybrid.py  mask_attack.py  pmk_calculator.py  rule_engine.py  session_manager.py  wordlist_gen.py
wifi_aio/data/: __init__.py  common_passwords.py  cve_database.py  encryption_suites.py  oui_database.py  port_services.py  reason_codes.py  router_defaults.py  wifi6e_channels.py  wifi7_features.py  wifi_channels.py  wordlist_rules.py  wps_pins.py
wifi_aio/db/: __init__.py  backup.py  migrations.py  models.py
wifi_aio/db/repositories/: __init__.py  config_repo.py  credential_repo.py  network_repo.py  scan_repo.py  session_repo.py
wifi_aio/frames/: __init__.py  base_frame.py  control.py  data.py  eapol.py  fcs.py  fuzzing.py  information_elements.py  management.py
wifi_aio/i18n/: __init__.py  en.py  hi.py
wifi_aio/integrations/: __init__.py  aircrack_ng.py  bettercap_wrapper.py  hashcat_wrapper.py  john_wrapper.py  kismet_wrapper.py  macchanger_wrapper.py  nmap_wrapper.py  reaver_wrapper.py  tool_detector.py  wireshark_wrapper.py
wifi_aio/osint/: __init__.py  google_locate.py  isp_identifier.py  openwifi.py  osint_report.py  router_fingerprint.py  ssid_intel.py  wigle.py
wifi_aio/platform/: __init__.py  base.py  factory.py  linux.py  macos.py  termux.py  windows.py
wifi_aio/plugins/: __init__.py  base_plugin.py  example_plugin.py  plugin_loader.py  plugin_registry.py
wifi_aio/rogue/: __init__.py  captive_portal.py  client_monitor.py  credential_logger.py  dhcp_server.py  dns_server.py  hostapd_manager.py  http_server.py  https_server.py  ssl_cert_gen.py
wifi_aio/ui/: __init__.py  ascii_art.py  colors.py  components.py  display.py  input_handler.py  progress.py
wifi_aio/vuln/: __init__.py  cve_lookup.py  default_cred_checker.py  dns_hijack_checker.py  krack_checker.py  pmf_checker.py  rogue_dhcp_checker.py  vuln_report.py  wep_checker.py  wpa3_checker.py  wpa_checker.py  wps_checker.py
