# ============================================================
# WiFiAIO - Setup Configuration
# ============================================================

[metadata]
name = wifiaio
version = 1.0.0
author = T3RMUXK1NG
author_email = t3rmuxk1ng@example.com
description = All-in-One WiFi Auditing & Security Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/t3rmuxk1ng/WiFiAIO
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security
    Topic :: System :: Networking :: Monitoring
    Topic :: System :: Networking :: Wireless

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    scapy>=2.5.0
    requests>=2.31.0
    rich>=13.7.0
    textual>=0.47.0
    fastapi>=0.109.0
    uvicorn[standard]>=0.27.0
    websocket-client>=1.7.0
    psutil>=5.9.7
    netifaces>=0.11.0
    python-dotenv>=1.0.0

[options.packages.find]
where = src

[options.package_data]
wifiaio =
    py.typed
    config/*.yaml
    config/*.json
    tui/css/*.tcss

[options.entry_points]
console_scripts =
    wifiaio = wifiaio.cli:main

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-asyncio>=0.23.0
    black>=24.1.0
    isort>=5.13.0
    flake8>=7.0.0
    pylint>=3.0.0
    mypy>=1.8.0
    pre-commit>=3.6.0

# ============================================================
# Flake8 Configuration
# ============================================================
[flake8]
max-line-length = 100
max-complexity = 15
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .eggs,
    .tox,
    .mypy_cache,
    .pytest_cache,
    venv,
    .venv,
    env,
per-file-ignores =
    __init__.py:F401
    setup.py:E501
ignore =
    E203,  # whitespace before ':' (conflicts with black)
    E501,  # line too long (handled by max-line-length)
    W503,  # line break before binary operator (conflicts with black)
    W504,  # line break after binary operator
statistics = True
show-source = True

# ============================================================
# Mypy Configuration
# ============================================================
[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
strict_optional = True
show_error_codes = True
show_traceback = True
pretty = True

[mypy-scapy.*]
ignore_missing_imports = True

[mypy-netifaces.*]
ignore_missing_imports = True

[mypy-psutil.*]
ignore_missing_imports = True

# ============================================================
# Isort Configuration
# ============================================================
[isort]
profile = black
line_length = 100
known_first_party = wifiaio
known_third_party = scapy,requests,rich,textual,fastapi,uvicorn,websocket,psutil,netifaces,dotenv
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip_gitignore = True

# ============================================================
# Coverage Configuration
# ============================================================
[coverage:run]
source = wifiaio
branch = True
omit =
    tests/*
    setup.py

[coverage:report]
precision = 2
show_missing = True
skip_covered = False
exclude_lines =
    pragma: no cover
    def __repr__
    def __str__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
    pass

[coverage:html]
directory = htmlcov
